--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -106,3 +106,4 @@ repos:
   hooks:
   - id: mypy
     args: ['--ignore-missing-imports', '--strict']
+    additional_dependencies: ['types-setuptools']
