--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ deploy-to-pypi:
   only:
   - tags@IngoMeyer/radiotray-ng-mpris
   before_script:
-  - pip install twine
+  - pip install setuptools twine
   - echo "[distutils]"                    > ~/.pypirc;
     echo "index-servers ="               >> ~/.pypirc;
     echo "    pypi"                      >> ~/.pypirc;
